--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TP Backend 1 - Enunciado 1.1 - Desarrollo",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
