--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "mongoose": "^5.6.9"
   }
 }
