--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/santiagogarcia97/tp-backend-2019#readme",
   "dependencies": {
+    "@hapi/boom": "^7.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
